Add nationwide fuel price API
