# sunset-api/src/models/mod.rs
@@ -1,5 +1,7 @@
+pub mod fuel_price;
 pub mod invoice;
 pub mod reservoir;
 
+pub use fuel_price::NationwideFuelPrice;
 pub use invoice::Invoice;
 pub use reservoir::Reservoir;
